Add basic e2e test coverage for components
Still no coverage for the custom modules. I this it might be
best to cover these with some unit tests with mocked services.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "author": "",
   "devDependencies": {
+    "jasmine-spec-reporter": "^3.2.0",
+    "protractor": "latest"
   },
   "dependencies": {
-    "angular-cookies": "^1.6.1",
     "primo-explore-hathitrust-availability": "git+ssh://git@github.umn.edu:gpeterso/primo-explore-hathitrust-availability.git#v2.1.1"
+  },
+  "scripts": {
+    "test-e2e": "protractor e2e-tests/protractor.conf",
+    "webdriver": "webdriver-manager update && webdriver-manager start"
   }
 }
