--- a/package.json
+++ b/package.json
@@ -4,13 +4,28 @@
   "description": "",
   "author": "",
   "devDependencies": {
+    "@uirouter/angularjs": "^1.0.0-beta.2",
+    "angular": "^1.5.8",
+    "angular-mocks": "^1.5.8",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "jasmine-core": "^2.5.1",
     "jasmine-spec-reporter": "^3.2.0",
+    "karma": "^1.3.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-browserify": "^5.1.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-jquery": "^0.1.1",
+    "karma-spec-reporter": "0.0.31",
     "protractor": "latest"
   },
   "dependencies": {
     "primo-explore-hathitrust-availability": "git+ssh://git@github.umn.edu:gpeterso/primo-explore-hathitrust-availability.git#v2.1.4"
   },
   "scripts": {
+    "test-unit": "karma start --singleRun",
     "test-e2e": "protractor e2e-tests/protractor.conf",
     "webdriver": "webdriver-manager update && webdriver-manager start"
   }
