--- a/e2e-tests/protractor.conf
+++ b/e2e-tests/protractor.conf
@@ -14,7 +14,7 @@ exports.config = {
 
   framework: 'jasmine',
 
-  seleniumAddress: 'http://localhost:4444/wd/hub',
+//  seleniumAddress: 'http://localhost:4444/wd/hub',
 
   jasmineNodeOpts: {
     defaultTimeoutInterval: 30000,
