--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
+    "eslint": "^4.2.0",
+    "eslint-plugin-angular": "^3.0.0",
+    "eslint-plugin-jasmine": "^2.7.1",
     "jasmine-core": "^2.5.1",
     "jasmine-spec-reporter": "^3.2.0",
     "karma": "^1.3.0",
