--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^4.2.0",
     "eslint-plugin-angular": "^3.0.0",
     "eslint-plugin-jasmine": "^2.7.1",
+    "eslint-plugin-protractor": "^1.40.0",
     "jasmine-core": "^2.5.1",
     "jasmine-spec-reporter": "^3.2.0",
     "karma": "^1.3.0",
