--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@uirouter/angularjs": "^1.0.0-beta.2",
     "angular": "^1.5.8",
     "angular-mocks": "^1.5.8",
+    "angular-translate": "^2.15.2",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
