--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "author": "",
   "devDependencies": {
     "@uirouter/angularjs": "^1.0.0-beta.2",
-    "angular": "^1.5.8",
-    "angular-mocks": "^1.5.8",
+    "angular": "^1.6.1",
+    "angular-animate": "^1.6.1",
+    "angular-aria": "^1.6.1",
+    "angular-cookies": "^1.6.1",
+    "angular-material": "^1.1.4",
+    "angular-mocks": "^1.6.1",
     "angular-translate": "^2.15.2",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
@@ -15,6 +19,7 @@
     "eslint-plugin-angular": "^3.0.0",
     "eslint-plugin-jasmine": "^2.7.1",
     "eslint-plugin-protractor": "^1.40.0",
+    "httpbackend": "^2.0.0",
     "jasmine-core": "^2.5.1",
     "jasmine-spec-reporter": "^3.2.0",
     "karma": "^1.3.0",
