--- a/e2e-tests/protractor.conf
+++ b/e2e-tests/protractor.conf
@@ -2,6 +2,10 @@ exports.config = {
 
   allScriptsTimeout: 11000,
 
+  rootElement: 'primo-explore',
+
+  restartBrowserBetweenTests: true,
+
   specs: [
     '*.spec.js'
   ],
