--- a/package.json
+++ b/package.json
@@ -4,35 +4,36 @@
   "description": "",
   "author": "",
   "devDependencies": {
-    "@uirouter/angularjs": "^1.0.0-beta.2",
-    "angular": "^1.6.1",
-    "angular-animate": "^1.6.1",
-    "angular-aria": "^1.6.1",
-    "angular-cookies": "^1.6.1",
-    "angular-material": "^1.1.4",
-    "angular-mocks": "^1.6.1",
-    "angular-translate": "^2.15.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
-    "eslint": "^4.2.0",
-    "eslint-plugin-angular": "^3.0.0",
-    "eslint-plugin-jasmine": "^2.7.1",
-    "eslint-plugin-protractor": "^1.40.0",
-    "httpbackend": "^2.0.0",
-    "jasmine-core": "^2.5.1",
-    "jasmine-spec-reporter": "^3.2.0",
-    "karma": "^1.3.0",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-browserify": "^5.1.1",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-jquery": "^0.1.1",
+    "angular-ui-router": "0.3.2",
+    "angular": "1.6.3",
+    "angular-animate": "1.6.3",
+    "angular-aria": "1.6.3",
+    "angular-cookies": "1.6.3",
+    "angular-material": "1.1.4",
+    "angular-mocks": "1.6.3",
+    "angular-translate": "2.15.2",
+    "babel-preset-es2015": "6.24.1",
+    "babelify": "7.3.0",
+    "browserify": "14.4.0",
+    "eslint": "4.2.0",
+    "eslint-plugin-angular": "3.0.0",
+    "eslint-plugin-jasmine": "2.7.1",
+    "eslint-plugin-protractor": "1.40.0",
+    "httpbackend": "2.0.0",
+    "jasmine-core": "2.5.1",
+    "jasmine-spec-reporter": "3.2.0",
+    "karma": "1.3.0",
+    "karma-babel-preprocessor": "6.0.1",
+    "karma-browserify": "5.1.1",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-jasmine": "1.0.2",
+    "karma-jasmine-jquery": "0.1.1",
     "karma-spec-reporter": "0.0.31",
-    "primo-explore-hathitrust-availability": "^2.2.1",
     "protractor": "latest"
   },
-  "dependencies": {},
+  "dependencies": {
+    "primo-explore-hathitrust-availability": "^2.3.0"
+  },
   "scripts": {
     "start": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo-test.lib.umn.edu'",
     "start-prod": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo.lib.umn.edu'",
