--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "author": "",
   "devDependencies": {
-    "angular-ui-router": "0.3.2",
     "angular": "1.6.3",
     "angular-animate": "1.6.3",
     "angular-aria": "1.6.3",
@@ -12,6 +11,7 @@
     "angular-material": "1.1.4",
     "angular-mocks": "1.6.3",
     "angular-translate": "2.15.2",
+    "angular-ui-router": "0.3.2",
     "babel-preset-es2015": "6.24.1",
     "babelify": "7.3.0",
     "browserify": "14.4.0",
@@ -29,19 +29,20 @@
     "karma-jasmine": "1.0.2",
     "karma-jasmine-jquery": "0.1.1",
     "karma-spec-reporter": "0.0.31",
-    "protractor": "latest"
+    "protractor": "^5.4.2"
   },
   "dependencies": {
     "primo-explore-hathitrust-availability": "^2.3.0"
   },
   "scripts": {
-    "start": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo-test.lib.umn.edu' --saml",
-    "start-prod": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo.lib.umn.edu' --saml",
-    "start-qa": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo-qa.hosted.exlibrisgroup.com'",
+    "start": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo-test.lib.umn.edu' --saml --useScss",
+    "start-prod": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo.lib.umn.edu' --saml --useScss",
+    "start-qa": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo-qa.hosted.exlibrisgroup.com' --useScss",
     "test-unit": "karma start --singleRun",
     "test-e2e": "protractor e2e-tests/protractor.conf",
     "pkg": "gulp create-package --browserify --view CENTRAL_PACKAGE",
     "webdriver-update": "webdriver-manager update",
-    "gen-color-scheme": "gulp app-css --view CENTRAL_PACKAGE --proxy 'https://primo-test.lib.umn.edu'" 
+    "gen-color-scheme": "gulp app-css --view CENTRAL_PACKAGE --proxy 'https://primo-test.lib.umn.edu'",
+    "check-npm-version": "npm -v"
   }
 }
