--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "author": "",
   "devDependencies": {
-    "angular": "1.6.3",
-    "angular-animate": "1.6.3",
-    "angular-aria": "1.6.3",
-    "angular-cookies": "1.6.3",
+    "angular": "^1.6.10",
+    "angular-animate": "^1.6.10",
+    "angular-aria": "^1.6.10",
+    "angular-cookies": "^1.6.10",
     "angular-material": "1.1.4",
-    "angular-mocks": "1.6.3",
-    "angular-translate": "2.15.2",
+    "angular-mocks": "^1.6.10",
+    "angular-translate": "^2.19.0",
     "angular-ui-router": "0.3.2",
     "babel-preset-es2015": "6.24.1",
     "babelify": "7.3.0",
@@ -25,15 +25,17 @@
     "karma": "1.3.0",
     "karma-babel-preprocessor": "6.0.1",
     "karma-browserify": "5.1.1",
-    "karma-chrome-launcher": "2.0.0",
+    "karma-chrome-launcher": "3.1.0",
     "karma-jasmine": "1.0.2",
     "karma-jasmine-jquery": "0.1.1",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-spec-reporter": "0.0.31",
-    "protractor": "^5.4.4"
+    "protractor": "^5.4.4",
+    "puppeteer": "^10.4.0"
   },
   "dependencies": {
     "lodash.uniqby": "^4.7.0",
-    "primo-explore-hathitrust-availability": "^2.6.3"
+    "primo-explore-hathitrust-availability": "^2.7.0"
   },
   "scripts": {
     "start": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo-test.lib.umn.edu' --saml --useScss",
