Use headless protractor tests

--- a/e2e-tests/protractor.conf
+++ b/e2e-tests/protractor.conf
@@ -11,14 +11,15 @@ exports.config = {
   ],
 
   capabilities: {
-    'browserName': 'chrome'
+    'browserName': 'chrome',
+    chromeOptions: {
+      args: [ "--headless", "--disable-gpu", "--window-size=800,600" ]
+    }
   },
 
   baseUrl: 'http://localhost:8003/primo-explore/',
 
   framework: 'jasmine',
-
-//  seleniumAddress: 'http://localhost:4444/wd/hub',
 
   jasmineNodeOpts: {
     defaultTimeoutInterval: 30000,
