Use standard npm command for unit tests

--- a/package.json
+++ b/package.json
@@ -41,11 +41,10 @@
     "start": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo-test.lib.umn.edu' --saml --useScss",
     "start-prod": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo.lib.umn.edu' --saml --useScss",
     "start-qa": "gulp run --view CENTRAL_PACKAGE --browserify --proxy 'https://primo-qa.hosted.exlibrisgroup.com' --useScss",
-    "test-unit": "karma start --singleRun",
+    "test": "karma start --singleRun",
     "test-e2e": "protractor e2e-tests/protractor.conf",
     "pkg": "gulp create-package --browserify --view CENTRAL_PACKAGE --useScss",
     "webdriver-update": "webdriver-manager update",
-    "gen-color-scheme": "gulp app-css --view CENTRAL_PACKAGE --proxy 'https://primo-test.lib.umn.edu'",
-    "check-npm-version": "npm -v"
+    "gen-color-scheme": "gulp app-css --view CENTRAL_PACKAGE --proxy 'https://primo-test.lib.umn.edu'"
   }
 }
