--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "author": "",
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "angular": "^1.6.10",
     "angular-animate": "^1.6.10",
     "angular-aria": "^1.6.10",
@@ -12,22 +14,17 @@
     "angular-mocks": "^1.6.10",
     "angular-translate": "^2.19.0",
     "angular-ui-router": "0.3.2",
-    "babel-preset-es2015": "6.24.1",
-    "babelify": "7.3.0",
-    "browserify": "14.4.0",
-    "eslint": "4.2.0",
-    "eslint-plugin-angular": "3.0.0",
-    "eslint-plugin-jasmine": "2.7.1",
-    "eslint-plugin-protractor": "1.40.0",
-    "httpbackend": "2.0.0",
-    "jasmine-core": "2.5.1",
-    "jasmine-spec-reporter": "3.2.0",
-    "karma": "1.3.0",
-    "karma-babel-preprocessor": "6.0.1",
-    "karma-browserify": "5.1.1",
+    "eslint": "^7.32.0",
+    "eslint-plugin-angular": "^4.1.0",
+    "eslint-plugin-jasmine": "^4.1.2",
+    "eslint-plugin-protractor": "^2.1.1",
+    "jasmine-core": "^3.10.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.3.4",
+    "karma-babel-preprocessor": "^8.0.1",
+    "karma-browserify": "^8.1.0",
     "karma-chrome-launcher": "3.1.0",
-    "karma-jasmine": "1.0.2",
-    "karma-jasmine-jquery": "0.1.1",
+    "karma-jasmine": "^4.0.1",
     "karma-spec-reporter": "0.0.31",
     "protractor": "^7.0.0",
     "puppeteer": "^10.4.0"
