--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "angular-translate": "^2.19.0",
     "angular-ui-router": "0.3.2",
     "babel-plugin-transform-html-import-to-string": "^2.0.0",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-angular": "^4.1.0",
     "eslint-plugin-jasmine": "^4.1.2",
